--- a/src/style/sass/style.scss
+++ b/src/style/sass/style.scss
@@ -56,6 +56,20 @@ html, body {
   position: static;
 }
 
+.text-presentation {
+  padding-top: 110px;
+}
+
+.__right {
+  padding-right: 15em;
+}
+
+.__left {
+  padding-left: 10em;
+  padding-right: 10em;
+
+}
+
 .div1 {
 
   .img-presentation {
